src/objects/Pass__c.object
<CustomObject>
    <fields>
        <fullName>Conference__c</fullName>
        <label>Conference</label>
        <referenceTo>Conference__c</referenceTo>
        <relationshipLabel>Passes</relationshipLabel>
        <relationshipName>Passes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Hidden__c</fullName>
        <formula>IF( Discount__c  = null, Conference__r.Price__c, Conference__r.Price__c *  (100 - Discount__c)*0.01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price(Hidden)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>Don&apos;t input any value in this field, because we wouldn&apos;t use it.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pass</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Full_House</fullName>
        <active>true</active>
        <errorConditionFormula>Conference__r.Total_Registrations__c &lt;=  Conference__r.Completed_Registration__c</errorConditionFormula>
        <errorMessage>No more available tickets.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_past_dates_registraition</fullName>
        <active>true</active>
        <errorConditionFormula>Conference__r.End_Date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Conference__c</errorDisplayField>
        <errorMessage>Sorry, but this Conference is over.</errorMessage>
    </validationRules>
</CustomObject>